[package]
name = "strava_client"
version = "0.1.0"
authors = ["Tim Van Wassenhove, OpenAPI Generator team and contributors"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/timvw/strava-client/"
description = "Client API for Strava. https://developers.strava.com/"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
